--- a/pubsubplus/templates/solaceConfigMap.yaml
+++ b/pubsubplus/templates/solaceConfigMap.yaml
@@ -9,6 +9,9 @@ metadata:
     helm.sh/chart: {{ .Chart.Name }}-{{ .Chart.Version }}
 data:
   init.sh: |-
+    echo(){
+        printf '%b ' "$@\n\c"
+    }
     export username_admin_passwordfilepath="/mnt/disks/secrets/username_admin_password"
     export username_admin_globalaccesslevel=admin
     export service_ssh_port='2222'
@@ -82,6 +85,9 @@ data:
 
   startup-broker.sh: |-
     #!/bin/bash
+    echo(){
+        printf '%b ' "$@\n\c"
+    }
     APP=`basename "$0"`
     IFS='-' read -ra host_array <<< $(hostname)
     node_ordinal=${host_array[-1]}
@@ -271,6 +277,9 @@ data:
 
   readiness_check.sh: |-
     #!/bin/bash
+    echo(){
+        printf '%b ' "$@\n\c"
+    }
     APP=`basename "$0"`
     LOG_FILE=/usr/sw/var/k8s_readiness_check.log # STDOUT/STDERR goes to k8s event logs but gets cleaned out eventually. This will also persist it.
     if [ -f ${LOG_FILE} ] ; then
@@ -353,7 +362,11 @@ data:
     # Record current version in LASTVERSION_FILE
     echo $(get_label "controller-revision-hash") > ${LASTVERSION_FILE}
     # For monitor node just check for 3 online nodes in group; active label will never be set
-    echo "`date` INFO: ${APP}-Running checks. Server status check started..."
+    server_check_logged_recently=$(tail -n 6 $LOG_FILE | grep -q 'Running checks. Server status check started...'; echo $?)
+    if [ "${server_check_logged_recently}" == "1" ]; then
+       # Only log if there is no recent log of the same to avoid spamming
+       echo "`date` INFO: ${APP}-Running checks. Server status check started..."
+    fi
     if [ "${node_ordinal}" = "2" ]; then
       # Check redundancy
       echo "`date` INFO: ${APP}-Running checks. Redundancy state check started..."
@@ -414,7 +427,11 @@ data:
     case "${local_activity}" in
       "Mate Active")
         # Check redundancy
-        echo "`date` INFO: ${APP}-Running additional checks for standby broker. Redundancy state check started..."
+        redundancy_check_logged_recently=$(tail -n 6 $LOG_FILE | grep -q 'Running additional checks for standby broker. Redundancy state check started'; echo $?)
+        if [ "${redundancy_check_logged_recently}" == "1" ]; then
+           # Only log if there is no recent log of the same to avoid spamming
+           echo "`date` INFO: ${APP}-Running additional checks for standby broker. Redundancy state check started..."
+        fi
         results=`/mnt/disks/solace/semp_query.sh -n admin -p ${password} -u http://localhost:8080 \
                 -q "<rpc><show><redundancy/></show></rpc>" \
                 -v "/rpc-reply/rpc/show/redundancy/redundancy-status"`
@@ -424,7 +441,11 @@ data:
           rm -f ${FINAL_ACTIVITY_LOGGED_TRACKING_FILE}; exit 1
         fi
         # Additionally check config-sync status for non-monitoring nodes
-        echo "`date` INFO: ${APP}-Running checks. Config-sync state check started..."
+        config_check_logged_recently=$(tail -n 6 $LOG_FILE | grep -q 'Running checks. Config-sync state check started'; echo $?)
+        if [ "${config_check_logged_recently}" == "1" ]; then
+          # Only log if there is no recent log of the same to avoid spamming
+          echo "`date` INFO: ${APP}-Running checks. Config-sync state check started..."
+        fi
         if [ "${node_ordinal}" != "2" ]; then
           results=`/mnt/disks/solace/semp_query.sh -n admin -p ${password} -u http://localhost:8080 \
                   -q "<rpc><show><config-sync></config-sync></show></rpc>" \
