Updated repo-id Hub metadata

--- a/helm-charts/artifacthub-repo.yml
+++ b/helm-charts/artifacthub-repo.yml
@@ -1,6 +1,6 @@
 # Artifact Hub repository metadata file
 #
-#repositoryID: The ID of the Artifact Hub repository where the packages will be published to (optional, but it enables verified publisher)
+repositoryID: 3d1519de-2506-4805-b90a-9d2ba2179655
 owners: # (optional, used to claim repository ownership)
   - name: PhilippeKhalife
   - name: LewisKSaint
