DATAGO-68063 | Adding automated testing for toleration and node affinity

--- a/pubsubplus/templates/solaceStatefulSet.yaml
+++ b/pubsubplus/templates/solaceStatefulSet.yaml
@@ -30,6 +30,14 @@ spec:
           {"Pods":[{"metadata":{"name":"{{ template "solace.fullname" . }}-2"},"spec":{"containers": [{"name": "pubsubplus","resources": {"requests": {"cpu": "1","memory": "1965Mi"},"limits": {"cpu": "1","memory": "1965Mi"} }} ] } } ]}
 {{- end}}
     spec:
+{{- if .Values.solace.affinity }}
+      affinity:
+{{ toYaml .Values.solace.affinity | indent 8 }}
+{{- end }}
+{{- if .Values.solace.tolerations }}
+      tolerations:
+{{ toYaml .Values.solace.tolerations | indent 6 }}
+{{- end }}
 {{- if .Values.image.pullSecretName }}
       imagePullSecrets:
       - name: {{ .Values.image.pullSecretName}}
