--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -138,6 +138,39 @@ jobs:
         if [[ -z `curl -sS -u admin:admin http://$url:8080/SEMP -d "<rpc><show><config-sync></config-sync></show></rpc>" | grep "<oper-status>Up</oper-status>"` ]] ; then echo "config-sync not up!"; exit 1; fi
         helm list
         helm delete $(helm list | grep deployed | awk '{print $1}')
+        kubectl delete secret test-tls
+        kubectl delete pvc --all
+
+    - name: Test HA broker Toleration
+      run: |
+        REPO=solace/solace-pubsub-standard
+        TAG=latest
+        kubectl get nodes
+        #create taint for first node
+        nodesAll=$(kubectl get nodes --output name) &&  firstNode=`echo "${nodesAll}" | head -1` 
+        kubectl taint nodes $firstNode scheduleBroker=no:NoSchedule
+        #confirm node taint
+        echo "$firstNode has been tainted"
+        kubectl describe $firstNode | grep scheduleBroker
+        openssl req -x509 -nodes -days 365 -newkey rsa:2048 -keyout tls.key -out tls.crt -subj "/CN=*"
+        kubectl create secret tls test-tls --key="tls.key" --cert="tls.crt"
+        helm install my-release-toleration pubsubplus --set "solace.tolerations[0].key=scheduleBroker,solace.tolerations[0].operator=Equal,solace.tolerations[0].value=no,solace.tolerations[0].effect=NoSchedule,solace.size=dev,solace.redundancy=true,solace.podDisruptionBudgetForHA=true,solace.podModifierEnabled=true,tls.enabled=true,tls.serverCertificatesSecret=test-tls,solace.usernameAdminPassword=admin,image.repository=$REPO,image.tag=$TAG"
+        kubectl get statefulset,svc,pods,pvc,pv --show-labels
+        echo "Waiting for broker to become active"
+        sleep 60; kubectl describe nodes
+        until kubectl get pods --show-labels | grep pubsubplus-0 | grep -m 1 -E '1/1'; do sleep 10; done
+        until kubectl get pods --show-labels | grep pubsubplus-1 | grep -m 1 -E '1/1'; do sleep 10; done
+        until kubectl get pods --show-labels | grep pubsubplus-2 | grep -m 1 -E '1/1'; do sleep 10; done
+        until kubectl get pods --show-labels | grep pubsubplus- | grep -m 1 -E 'active=true'; do sleep 10; done
+        bash -c 'if [[ `kubectl get po --show-labels | grep -c "1/1"` -ne 3 ]]; then echo "Some pods are not ready!"; kubectl get po --show-labels; exit 1; fi'
+        #confirm broker deployment meets toleration requirements
+        echo "get node confirmation of no resources"
+        kubectl get pods --all-namespaces -o wide --field-selector spec.nodeName=$firstNode
+        sleep 30
+        helm list
+        helm delete $(helm list | grep deployed | awk '{print $1}')
+        kubectl taint nodes $firstNode scheduleBroker=no:NoSchedule-
+        kubectl delete secret test-tls
         kubectl delete pvc --all
 
     - name: Create chart variants
