--- a/pubsubplus/templates/solaceStatefulSet.yaml
+++ b/pubsubplus/templates/solaceStatefulSet.yaml
@@ -131,6 +131,10 @@ spec:
           valueFrom:
             fieldRef:
               fieldPath: metadata.namespace
+        - name: HA_ROLE
+          valueFrom:
+            fieldRef:
+              fieldPath: metadata.labels['apps.kubernetes.io/pod-index']
         - name: TZ
           value: {{ printf "%s/%s" ":/usr/share/zoneinfo" (default "UTC" .Values.solace.timezone) }}
         - name: UMASK
@@ -181,9 +185,14 @@ spec:
           mountPath: /etc/podinfo        
         - name: config-map
           mountPath: /mnt/disks/solace
-        - name: secrets
-          mountPath: /mnt/disks/secrets
+        - name: admin-secrets
+          mountPath: /mnt/disks/secrets/admin/
           readOnly: true
+        {{- if ( .Values.insights.enabled) }}
+        - name: insights-secrets
+          mountPath: /mnt/disks/secrets/insights/
+          readOnly: true
+          {{- end }}
 {{- if and (.Values.tls) (.Values.tls.enabled) }}
         - name: server-certs
           mountPath: /mnt/disks/certs/server
@@ -226,6 +235,60 @@ spec:
         - name: soft-adb-ephemeral
           mountPath: /usr/sw/internalSpool/softAdb
         {{- end }}
+        {{- if ( .Values.insights.enabled) }}
+      - name: datadog-agent
+        image: us-docker.pkg.dev/capable-stream-180018/solace-datadog-agent/solace-datadog-agent:latest
+        imagePullPolicy: Always
+        ports:
+          - containerPort: 8125
+            name: dogstatsdport
+            protocol: UDP
+          - containerPort: 8126
+            name: traceport
+            protocol: TCP
+        resources:
+          requests:
+            memory: {{ .Values.insights.resources.requests.memory }}
+            cpu: {{ .Values.insights.resources.requests.cpu }}
+          limits:
+            memory: {{ .Values.insights.resources.limits.memory }}
+            cpu: {{ .Values.insights.resources.limits.cpu }}
+        env:
+          - name: DD_KUBERNETES_KUBELET_HOST
+            valueFrom:
+              fieldRef:
+                fieldPath: status.hostIP
+          - name: DD_PROCFS_PATH
+            value: "/proc"
+          - name: HA_ROLE
+            valueFrom:
+              fieldRef:
+                fieldPath: metadata.labels['apps.kubernetes.io/pod-index']
+        envFrom:
+          - configMapRef:
+              name: {{ template "solace.fullname" . }}-agentv2-0
+          - secretRef:
+              name: {{ template "solace.fullname" . }}-monitoring-dd-env-secrets
+        securityContext:
+          allowPrivilegeEscalation: false
+          capabilities:
+            drop:
+              - ALL
+        volumeMounts:
+          - name: data
+            mountPath: /jail
+            subPath: jail
+            readOnly: true
+          - name: monitoring-logs
+            mountPath: /etc/datadog-agent/conf.d/solace.d
+          - name: monitoring-solace
+            mountPath: /conf.d
+          - name: monitoring-monitoringconfig
+            mountPath: /solace.d
+          - name: datadog-ssl-monitoringconfig
+            mountPath: /etc/datadog-agent/datadog.yaml
+            subPath: datadog.yaml
+{{- end -}}
 {{- end }}
       volumes:
         - name: podinfo
@@ -238,10 +301,39 @@ spec:
           configMap:
             name: {{ template "solace.fullname" . }}
             defaultMode: 0755
-        - name: secrets
+        - name: admin-secrets
           secret:
             secretName: {{ template "solace.fullname" . }}-secrets
             defaultMode: 0400
+        {{- if .Values.insights.enabled }}
+        - name: insights-secrets
+          secret:
+            secretName: {{ template "solace.fullname" . }}-insights-secrets
+            defaultMode: 0400
+        - name: monitoring-solace
+          projected:
+            sources:
+              - configMap:
+                  name: {{ template "solace.fullname" . }}-monitoring-solace
+        - name: monitoring-logs
+          configMap:
+            name: {{ template "solace.fullname" . }}-monitoring-logs
+            defaultMode: 0755
+            items:
+              - key: logs.yaml
+                path: logs.yml
+        - name: monitoring-monitoringconfig
+          configMap:
+            name: {{ template "solace.fullname" . }}-monitoring-config
+            defaultMode: 0755
+            items:
+              - key: monitoringConfig.yaml
+                path: monitoringConfig.yaml
+        - name: datadog-ssl-monitoringconfig
+          configMap:
+            name: {{ template "solace.fullname" . }}-datadog-ssl-vmrconfig
+            defaultMode: 0755
+{{- end }}
 {{- if and (.Values.tls) (.Values.tls.enabled) }}
         - name: server-certs
           secret:
